--- a/src/resources/elements/db-form/table-form.html
+++ b/src/resources/elements/db-form/table-form.html
@@ -7,7 +7,7 @@
                 description.bind="field.description"
                 options.bind="field.options"
                 val.bind="field.val"
-                change.delegate="handle_change(field)">
+                change.trigger="handle_change(field)">
             </field-control>
         </li>
     </ul>
