--- a/src/members/divorce.html
+++ b/src/members/divorce.html
@@ -1,14 +1,12 @@
-<template>
-    <ux-dialog class="${theme.rtltr}" style="width:150px">
-        <ux-dialog-header>
-            <h2>${member_name} ${'and' & t}${spouse_name} ${'members.are-divorced' & t}?</h2>
-        </ux-dialog-header>  
-        <ux-dialog-body>
-        </ux-dialog-body>
-        <ux-dialog-footer>   
-            <button click.delegate="do_divorce(1)">${'members.divorced' & t}</button>
-            <button click.delegate="do_divorce(2)">${'members.divorced-hidden' & t}</button>
-            <button click.delegate="undo_divorce()">${'members.not-divorced' & t}</button>
-        </ux-dialog-footer>
-    </ux-dialog>
-</template>
+<ux-dialog class="${theme.rtltr}" style="width:150px">
+    <ux-dialog-header>
+        <h2>${member_name} ${'and' & t}${spouse_name} ${'members.are-divorced' & t}?</h2>
+    </ux-dialog-header>  
+    <ux-dialog-body>
+    </ux-dialog-body>
+    <ux-dialog-footer>   
+        <button click.trigger="do_divorce(1)">${'members.divorced' & t}</button>
+        <button click.trigger="do_divorce(2)">${'members.divorced-hidden' & t}</button>
+        <button click.trigger="undo_divorce()">${'members.not-divorced' & t}</button>
+    </ux-dialog-footer>
+</ux-dialog>
