--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -13,7 +13,7 @@
                          id.bind="member_info.id" move_to.bind="move_to"
                 style="padding:0;"
                 action_key="Zoom" dir="ltr"
-                height_change.delegate="on_height_change($event)"
+                height_change.trigger="on_height_change($event)"
                 settings.bind="{arrows:true, height:220}">
             </photo-strip>
         </div>
@@ -95,7 +95,7 @@
                                                 class="btn btn-default ${disabled_if} ${spouse.marital_status} ${spouse.life_status}" 
                                                 repeat.for="spouse of member.family_connections.spouses" 
                                                 route-href="route: member-details; params.bind: {id:spouse.id, keywords: ''}"
-                                                contextmenu.delegate="divorce(spouse.id, 'spouse')">
+                                                contextmenu.trigger="divorce(spouse.id, 'spouse')">
                                                 <img src.bind="get_profile_photo(spouse)" />
                                                 <span>
                                                     ${spouse.name}
@@ -114,7 +114,7 @@
                                                 class="btn btn-default ${disabled_if} ${child.life_status}"
                                                 repeat.for="child of member.family_connections.children" 
                                                 route-href="route: member-details; params.bind: {id:child.id, keywords: ''}"
-                                                contextmenu.delegate="divorce(child.id, 'child')">
+                                                contextmenu.trigger="divorce(child.id, 'child')">
                                                 <img src.bind="get_profile_photo(child)" />
                                                 <span>
                                                     ${child.name}
@@ -184,10 +184,10 @@
             </div>
             <!--member stories panel-->
             <div id="stories" class="fr-view row ${theme.font-size} unselectable" ref="bottom_panel"
-                contextmenu.delegate="config_member_stories($event)"
+                contextmenu.trigger="config_member_stories($event)"
                 show.bind="member.member_stories.length > 1 && ! (user.editing || life_summary_expanded)"
                 css="margin-left:-28px;margin-right:0px;"
-                interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
+                interact-draggable.bind="theme.interact_setting" interact-dragend.trigger="shift_stories($event)" dir="rtl">
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" 
                     click.trigger="goto_story_page(story_1)">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
@@ -243,7 +243,7 @@
                 <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)">
                     <i class="fas fa-chevron-left fa-2x"></i>
                 </div>
-                <div class="slide-control config" click.delegate="config_member_stories($event)">
+                <div class="slide-control config" click.trigger="config_member_stories($event)">
                     <i class="fas fa-search fa-lg"></i>
                 </div>
             </div>
