--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -9,7 +9,7 @@
                 <div class="panel-body">
                     <section class="container">
 
-                        <form class="form-horizontal" submit.delegate="save()">
+                        <form class="form-horizontal" submit.trigger="save()">
                             <div class="form-group">
                                 <label
                                     style="margin-left:191px;width:150px;background-color:lightgray;border:solid 1px darkgray;border-radius:5px;text-align:center;padding:6px;"
@@ -31,7 +31,7 @@
                             </div>
                             <div style="padding-left:175px;margin-top:16px;" if.bind="! working">
                                 <button style="margin-left:auto; margin-right:auto;width:150px;"
-                                    click.delegate="cancel()" type="submit" class="btn btn-warning">${'photos.cancel' &
+                                    click.trigger="cancel()" type="submit" class="btn btn-warning">${'photos.cancel' &
                                     t}</button>
                             </div>
                         </form>
