--- a/src/resources/elements/db-form/field-control.html
+++ b/src/resources/elements/db-form/field-control.html
@@ -8,7 +8,7 @@
             repeat.for="opt of options"
             style="margin-left: 8px; width: 200px"
             class="btn btn-${bool_val==opt.value ? 'primary' : 'default'} customization"
-            click.delegate="selected(opt)"
+            click.trigger="selected(opt)"
         >
             <span style="font-weight: bolder">${opt.name & t}</span>
         </button>
@@ -21,7 +21,7 @@
         <select
             class="form-control"
             value.bind="int_val"
-            change.delegate="handle_change($event)"
+            change.trigger="handle_change($event)"
             style="margin-bottom: 14px"
         >
             <option repeat.for="opt of options" value.bind="opt.value">
@@ -45,14 +45,14 @@
             style="width: 60px; margin-left: 8px; margin-right: 8px"
             value.bind="relation"
             if.bind="has_relation"
-            change.delegate="handle_change($event)"
+            change.trigger="handle_change($event)"
         >
             <option repeat.for="rel of relations">${rel}</option>
         </select>
         <input
             type="number"
             value.bind="int_val"
-            change.delegate="handle_change($event)"
+            change.trigger="handle_change($event)"
         />
     </div>
     <div
@@ -71,7 +71,7 @@
             style="width: 60px; margin-left: 8px; margin-right: 8px"
             value.bind="relation"
             if.bind="has_relation"
-            change.delegate="handle_change($event)"
+            change.trigger="handle_change($event)"
         >
             <option repeat.for="rel of relations">${rel}</option>
         </select>
@@ -79,7 +79,7 @@
             base_date_str.bind="date_val"
             range_options.bind="[1]"
             label.bind="name"
-            change.delegate="handle_change($event)"
+            change.trigger="handle_change($event)"
         >
         </date-range>
     </div>
