--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -8,12 +8,12 @@
         <span show.bind="story.name || user.privileges.EDITOR" dir="${theme.rtltr}" style="padding:0;margin:0;">
             <i if.bind="user.privileges.EDITOR && user.editing" class="fas fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit', $event)">&nbsp;</i>
             <i if.bind="settings.deletable && user.privileges.ADMIN && user.editing" class="fas fa-sm fa-trash-alt is-link" t="[title]stories.delete" click.trigger="delete_story(story)">&nbsp;</i>
-            <i if.bind="settings.checkable && user.editing" class="fa${checked ? '' : 'r'} fa-circle fa-sm is-link" t="[title]stories.checking" click.delegate="toggle_checked($event)">&nbsp;</i>
+            <i if.bind="settings.checkable && user.editing" class="fa${checked ? '' : 'r'} fa-circle fa-sm is-link" t="[title]stories.checking" click.trigger="toggle_checked($event)">&nbsp;</i>
             <i if.bind="settings.pushable && user.privileges.ADMIN && user.editing" class="far fa-sm fa-arrow-up is-link" t="[title]stories.push-up" click.trigger="push_story(story)">&nbsp;</i>
             <i if.bind="settings.pinnable && user.privileges.ADMIN && user.editing" class="fas fa-sm fa-thumbtack is-link ${pinned ? 'pinned' : ''}" t="[title]stories.pin-story" click.trigger="pin_story(story)">&nbsp;</i>
             <i if.bind="settings.confirmable && user.privileges.TEXT_AUDITOR && user.editing" class="fas fa-sm fa-check-circle is-link " t="[title]stories.approve-story" click.trigger="approve_story(story)">&nbsp;</i>
             <i if.bind="settings.has_details" class="fas fa-sm fa-bars is-link" 
-                t="[title]docs.view-${user.editing ? 'edit-' : ''}details" click.delegate="view_details(story)">&nbsp;</i>
+                t="[title]docs.view-${user.editing ? 'edit-' : ''}details" click.trigger="view_details(story)">&nbsp;</i>
         </span>
         <span if.bind="settings.show_date &&story.timestamp">${story.timestamp | formatdate} |&nbsp;</span>
         <span if.bind="settings.show_author && story.author">${story.author}:&nbsp;</span>
