--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -3,10 +3,10 @@
         <search-input 
             value.bind="filter" placeholder.bind="place_holder_text" height="32"
             in_focus.bind="in_focus"
-            help_topic.bind="settings.help_topic" filter-change.delegate="enter_word($event)"></search-input>
+            help_topic.bind="settings.help_topic" filter-change.trigger="enter_word($event)"></search-input>
     </div>
     <button if.bind="can_add" class="btn btn-success btn-sm cl-create-btn"
-        click.delegate="dispatch_new_item_event($event)" style="width:88%;font-size:110%;">
+        click.trigger="dispatch_new_item_event($event)" style="width:88%;font-size:110%;">
         ${'multi-select.add-item' & t} ${filter}
     </button>
     <div class="ms-container">
@@ -23,28 +23,28 @@
                         <div style="display:flex;flex-direction:row-reverse;align-items:center;">
                             <i class="far fa-${item.group_number==open_group ? 'lock-open-alt' : 'lock-alt'} tool"
                                 if.bind="user.advanced_user && settings.can_group && item.first" t="[title]multi-select.lock-unlock"
-                                click.delegate="toggle_group(item.group_number)">
+                                click.trigger="toggle_group(item.group_number)">
                             </i>
                             <i class="far fa-${item.option.sign}-square fa-rotate-180 tool"
                                 if.bind="user.advanced_user && settings.can_set_sign && item.first" t="[title]multi-select.change-sign"
-                                click.delegate="toggle_sign(item.option, $event)">
+                                click.trigger="toggle_sign(item.option, $event)">
                             </i>
                             <i class="far fa-times-circle tool ${highlight_unselectors}" 
                                 t="[title]multi-select.unselect"
                                 if.bind="! item.option.undeletable"
                                 css="margin-left:${on_off_button_margin(item.first)}px"
-                                click.delegate="unselect_item(item, $index)">
+                                click.trigger="unselect_item(item, $index)">
                             </i>
                             <i class="user.advanced_user && far fa-exchange-alt tool" t="[title]multi-select.change-group"
                                 show.bind="item.moveable" 
-                                click.delegate="move_item(item, $index)">
+                                click.trigger="move_item(item, $index)">
                             </i>
                         </div>
-                        <span if.bind="! item.editing" style="height:24px;padding-right:5px;overflow:hidden;"  contextmenu.delegate="edit_option_dialog(item.option, $event)"
+                        <span if.bind="! item.editing" style="height:24px;padding-right:5px;overflow:hidden;"  contextmenu.trigger="edit_option_dialog(item.option, $event)"
                             class.bind="'option-kind-' + item.option.topic_kind">${item.option.name}</span>
                         <input type="text" if.bind="item.editing" value.bind="item.option.name"
                             style="overflow:hidden;"
-                            change.delegate="name_changed(item, $event)" style="width:55%">
+                            change.trigger="name_changed(item, $event)" style="width:55%">
                     </div>
                 </li>
             </ul>
@@ -57,18 +57,18 @@
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : 'ready'} untag-button"
                     style="cursor:pointer"
-                    click.delegate="show_untagged()">${show_untagged_caption}
+                    click.trigger="show_untagged()">${show_untagged_caption}
                 </li>
                 <li
                     repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' : 'name' | take : 999 | spy : agent">
                     <div class="option-item"
-                        contextmenu.delegate="edit_option_dialog(option, $event)"
+                        contextmenu.trigger="edit_option_dialog(option, $event)"
                         aubs-popover="body.bind:option.description;position:right;disabled.bind:!option.description"
                         css="margin:0;padding:0;padding-right:${(option.level || 0) * 16 + 2}px;width:${inner_width}px"
                         if.bind="option.topic_kind > 0 || user.editing">
-                        <i if.bind="option.topic_kind==1 && ! option.expanded" click.delegate="expand(option)"
+                        <i if.bind="option.topic_kind==1 && ! option.expanded" click.trigger="expand(option)"
                             class="fa fa-play fa-xs fa-rotate-90"></i>
-                        <i if.bind="option.topic_kind==1 && option.expanded" click.delegate="collapse(option)"
+                        <i if.bind="option.topic_kind==1 && option.expanded" click.trigger="collapse(option)"
                             class="fa fa-play fa-xs fa-rotate-180"></i>
                         <a click.trigger="select_option(option)"
                             class.bind="'option-kind-' + option.topic_kind">${option.name}</a>
