--- a/src/resources/elements/picker/picker.html
+++ b/src/resources/elements/picker/picker.html
@@ -2,11 +2,11 @@
     <div class="input-group search-filter" if.bind="options.length > 0 || first_time">
         <search-input value.bind="filter" placeholder.bind="settings.place_holder_text" height="32"
             help_topic.bind="settings.help_topic">
-            <!--filter-change.delegate="enter_word($event)"-->
+            <!--filter-change.trigger="enter_word($event)"-->
         </search-input>
     </div>
     <button if.bind="can_add" class="btn btn-success btn-sm cl-create-btn"
-        click.delegate="dispatch_new_item_event($event)" style="width:100%;font-size:110%;">
+        click.trigger="dispatch_new_item_event($event)" style="width:100%;font-size:110%;">
         ${'multi-select.add-item' & t} "${filter}"
     </button>
 
@@ -17,15 +17,15 @@
         <ul css="width:${width}px;">
             <li if.bind="option_was_selected" style="font-weight:bold;background-color:orange;border-radius:10px">
                 <div class="option-item">
-                    <button class="btn btn-warning" click.delegate="unselect_option()" style="width:100%;font-weight:bold;">
+                    <button class="btn btn-warning" click.trigger="unselect_option()" style="width:100%;font-weight:bold;">
                         ${'picker.unselect-item' & t}
                     </button>
                 </div>
             </li>
             <li repeat.for="option of options | filter: filter : 'name' | spy : agent">
-                <div class="option-item" contextmenu.delegate="edit_option_dialog(option, $event)"
+                <div class="option-item" contextmenu.trigger="edit_option_dialog(option, $event)"
                     aubs-popover="body.bind:option.description;position:right;disabled.bind:!option.description">
-                    <a click.delegate="select_option(option)">
+                    <a click.trigger="select_option(option)">
                         ${option.name}
                     </a>
                 </div>
