--- a/src/resources/elements/quiz/edit-answer.html
+++ b/src/resources/elements/quiz/edit-answer.html
@@ -14,10 +14,10 @@
         </form>
     </ux-dialog-body>
     <ux-dialog-footer>
-        <button type="button" class="btn btn-primary ${disabled_if}" click.delegate="save()">
+        <button type="button" class="btn btn-primary ${disabled_if}" click.trigger="save()">
             ${'members.save' & t}
         </button>
-        <button type="button" if.bind="!done" class="btn btn-info" click.delegate="cancel()">
+        <button type="button" if.bind="!done" class="btn btn-info" click.trigger="cancel()">
             ${'members.cancel' & t}
         </button>
     </ux-dialog-footer>
