--- a/src/resources/elements/quiz/quiz.html
+++ b/src/resources/elements/quiz/quiz.html
@@ -7,7 +7,7 @@ aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: main_filter_toggled()
     </button>
     <button class="btn btn-basic btn-lg" 
         if.bind="dirty" t="[title]quiz.clear-all"
-        click.delegate="clear_all()">
+        click.trigger="clear_all()">
         ${'quiz.clear-all' & t}
     </button>
     <help topic="using-quiz" style="margin-top:18px;" if.bind="q_state==USING" params.bind="help_data"
