--- a/src/resources/elements/search-input.html
+++ b/src/resources/elements/search-input.html
@@ -5,7 +5,7 @@
         <help topic.bind="help_topic" class="search" position="bottom" style="padding-right:2px;"></help>
     </div>
     <input type="search" value.bind="value" t="[placeholder]${placeholder}"
-        keydown.delegate="input_changed($event) & debounce: 3000"
+        keydown.trigger="input_changed($event) & debounce: 3000"
         focus.trigger="is_in_focus(true)"
         blur.trigger="is_in_focus(false)"
         id="search-input">
