--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -14,7 +14,7 @@
             </form>
             <div style="width:100%;height:32px;background-color:#f6f6f6;" 
                 interact-draggable.bind="theme.interact_setting"
-                interact-dragmove.delegate="move_editor($event)"
+                interact-dragmove.trigger="move_editor($event)"
             >
                 <div style="margin-left:auto;margin-right:auto;width:40px;padding-top:5px;">
                     <i class="fas fa-arrow-right" style="color:gray;"></i>
@@ -51,7 +51,7 @@
     </ux-dialog-body>
     <ux-dialog-footer if.bind="edit" style="padding-right:16px;">
         <button class="btn btn-danger btn-warning" click.trigger="cancel()">${'stories.cancel' & t}</button>
-        <button class="btn btn-success btn-primary ${dirty_story ? 'btn-warning' : 'disabled'}" click.delegate="save()">${'stories.save' & t}</button>
-        <button if.bind="! story.editable_preview" class="btn btn-basic btn-primary" click.delegate="clean()">${'stories.clean' & t}</button>
+        <button class="btn btn-success btn-primary ${dirty_story ? 'btn-warning' : 'disabled'}" click.trigger="save()">${'stories.save' & t}</button>
+        <button if.bind="! story.editable_preview" class="btn btn-basic btn-primary" click.trigger="clean()">${'stories.clean' & t}</button>
     </ux-dialog-footer>
 </ux-dialog>
